--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <hi>My first web page</hi>
+    <hi>My first web page on today</hi>
 </body>
 </html>
