--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <hi>My first web page on today</hi>
-</body>
+<html>
+    <head>
+        <title>Chemistry page</title>
+    </head>
+    <body>
+        <h1>Chemistry Assignment</h1>
+        <p>Chemistry is the branch of science that deals with the properties, composition, and behavour of matter It is a faccinating field that explores the building blocks of the univwese.</p>
+        <h2>Chemical Elements</h2>
+        <p>The <mark>periodic table</mark> is a tabular arrangement of chemical elements. Each elements is represented by its chemocal symbol, such as Fe for irom, H for hyddrogen,and O for oxygen. Elements are classified into groups and periods based on their properties.</p>
+        <h3>Chemical Equations</h3>
+        <p>Chemical reactions are represented using <i>chemical equations</i>. Here's an example of a <i>chemical reaction</i>: </p>
+        <p>2H<sub>2</sub> + O<sub>2</sub> &rarr; 2H<sub>2</sub>O</p>
+        <p>This equation represents the reaction between hydrogen gas (H<sub>2</sub>) and oxygen gas (O<sub>2</sub>) to form Water (H<sub>2</sub>O).</p>
+        <h4>Important Concepts</h4>
+        <p>Stoichiometry is the calculation of reactions and products in chemical reactions. It involves balancing chemical equations to ensure mass and charge are conserved.</p>
+        <p><sub>Subscripts</sub> indicate the number of atoms of each element in a molecule, while <sup>superscripts</sup> represent charges or the number of atoms in an iron.</p>
+        <h5>Conclusion</h5>
+        <p>Chemistry plays a crucial role in understanding the world around us. From the composition of the air we breathe to the reactions that power our bodies, chemistry influences every aspect of our lives.</p>
+        <h6>Refrences</h6>
+        <p>For further exploration, refer to : 
+            <a href="https://www.google.com/">Periodic Table</a>, 
+            <a href="https://www.google.com/">Khan Academy</a>, and 
+            <a href="https://www.google.com/">Chemical Reaction</a>.
+        </p>
+        <hr>
+        <p>This HTML page was created for educational purpose</p>
+
+    </body>
 </html>
