--- a/day4_question5.html
+++ b/day4_question5.html
@@ -8,7 +8,7 @@
         #list1 li:nth-child(2n+1){
             color: red;
         }
-        ul:nth-child(2){
+        ul:nth-child(2) li::marker{
             color:violet;
         }
     </style>
