--- a/day7_question10.html
+++ b/day7_question10.html
@@ -21,12 +21,13 @@
             flex-direction: row;
         }
         #footer{
-            width:100%;
+            margin: auto;
+            width:93.7%;
             background-color: rgb(33, 33, 92);
             color: aliceblue;
             display: flex;
-            justify-content: space-between;
-            padding:  20px;
+            justify-content:space-between;
+            padding: 20px 10px;
         }
         #left{
             display:flex;
@@ -70,8 +71,9 @@
             color: aliceblue;
         }
         #about_me div p{
-            font-size: 20px;
+            font-size: 18px;
             color: white;
+            padding-top: 10px;
         }
         @media screen and (max-width:500px){
             #container{
