--- a/day6_question7.html
+++ b/day6_question7.html
@@ -9,27 +9,29 @@
             margin: 0%;
         }
         #container{
-            width:2000px;
+            width:1200px;
             margin:auto;
-            padding:80px;
+            height:400px;
+            padding:30px;
             border:0px solid black;
             display: grid;
             grid-template-columns: repeat(12,1fr);
             grid-template-rows: repeat(5,1fr);
-            gap:30px;
+            gap:20px;
             background-color: rgb(47, 43, 43);
-            border-radius: 50px;
+            border-radius: 40px;
             margin-top: 100px;
         }
         #container div{
             border:3px solid black;
-            padding: 25px 5px;
-            text-align: center;
-            border-radius: 20px;
+            border-radius: 10px;
             font-size: 25px;
             font-weight: bold;
             color:aqua;
             background-color: black;
+            box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+            text-align: center;
+            padding-top: 10px;
         }
         #container #s_2{
             grid-column: span 2;
