--- a/day6_question8.html
+++ b/day6_question8.html
@@ -6,7 +6,8 @@
     <title>Calculator</title>
     <style>
         #container{
-            width:20%;
+            width:25%;
+            height:500px;
             /* border:1px solid red; */
             box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
             grid-template-columns: repeat(4,1fr);
@@ -16,7 +17,6 @@
             margin: auto;
             display:grid;
             gap:30px;
-            /* margin-top: auto; */
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         }
         #container > div{
