--- a/day7.html
+++ b/day7.html
@@ -35,7 +35,19 @@
             font-size:10x;
             font-weight: bold;
         }
-       
+        @media screen and (min-width:300px) and (max-width:450px){
+            #container{
+                grid-template-columns: repeat(3,1fr);
+                grid-template-rows: repeat(10,400px);
+                gap:10px;
+            }
+        }
+        @media screen and (min-width:451px) and (max-width:750px){
+            #container{
+                grid-template-columns: repeat(3,1fr);
+                grid-template-rows: repeat(7,400px);
+            }
+        }
     </style>
 </head>
 <body>
@@ -199,3 +211,66 @@
     </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Media queries</title>
+    <style>
+        body{
+            background-color: green;
+        }
+        h1{
+            font-size: 50px;
+            text-align: center;
+        }
+        @media screen and (min-width:300px) and (max-width:450px){
+            body{
+                background-color: yellow;
+            }
+            h1{
+                font-size: 20px;
+                font-style: italic;
+                text-align: right;
+            }
+        }
+        @media screen and (min-width:451px) and (max-width:750px){
+            body{
+                background-color: lightblue;
+            }
+            h1{
+                font-size: 35px;
+                text-align: left;
+            }
+        }
+    </style>
+</head>
+<body>
+    <h1>Masai School</h1>
+</body>
+</html> -->
+
+
+<!-- 
+small screen
+@media only screen and(min-width:300px) and (max-width:450px)
+
+@media -> starting point of media queries 
+only (optional), value if max-min width applying in media queries
+
+small screen -> min-width:300px; max-width:450px;
+mediun screen -> min-width:451px; max-width760px;
+large screen -> min-width:761px; max-width:1200px;
+
+screen(media-type) -> target computer, tablet, tv, mobile, print, etc
+-->
