--- a/day7_question10.html
+++ b/day7_question10.html
@@ -28,6 +28,7 @@
             display: flex;
             justify-content:space-between;
             padding: 20px 10px;
+
         }
         #left{
             display:flex;
@@ -89,7 +90,7 @@
                 text-align: center;
             }
             #footer{
-                flex-direction: column;
+                flex-direction: column-reverse;
                 align-items: center;
                 text-align: center;
             }
