--- a/day7_question8.html
+++ b/day7_question8.html
@@ -44,6 +44,8 @@
             margin:auto;
             margin-top: 30px;
             object-fit: cover;
+            margin-left: 105px;
+
 
         }
         #container div{
